# draco4

./: CMakeLists.txt  README.md  test_gear_ratio_velocity
include/: jd8_configuration.hpp  jd8_controller.hpp  jd8_pdo_structures.hpp  jd8_sdo_manager.hpp  motor_configuration.hpp  motor_controller.hpp  motor_pdo_structures.hpp  motor_sdo_manager.hpp
src/: ethercat_master.cpp  jd8_configuration.cpp  jd8_controller.cpp  jd8_sdo_manager.cpp  motor_configuration.cpp  motor_constants.cpp  motor_controller.cpp
tests/: build_encoder_test.sh  test_config_parser.cpp  test_hardware_integration.cpp  test_jd8_init.cpp  test_jd8_integration.cpp  test_jd8_position.cpp  test_jd8_torque.cpp  test_jd8_velocity.cpp  test_sdo_integration.cpp  test_simple_velocity.cpp  test_velocity_scaling.cpp
